WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268532
REGRESSION(ExtensionKit): Video stops playing on mlb.com when entering PiP
https://bugs.webkit.org/show_bug.cgi?id=268532
Summary
REGRESSION(ExtensionKit): Video stops playing on mlb.com when entering PiP
Andy Estes
Reported
2024-01-31 22:45:06 PST
REGRESSION(ExtensionKit): Video stops playing on mlb.com when entering PiP
Attachments
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2024-01-31 22:45:15 PST
<
rdar://problem/121120961
>
Andy Estes
Comment 2
2024-01-31 23:03:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23653
EWS
Comment 3
2024-02-02 22:51:07 PST
Committed
274037@main
(7223f04262f1): <
https://commits.webkit.org/274037@main
> Reviewed commits have been landed. Closing PR #23653 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug